--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,3 +48,5 @@ en:
       password: Password
       password_confirmation: Password Confirmation
       reset_password: Reset Password
+  password:
+    current_password: 'incorrect current password'
