Fix namespace translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -266,6 +266,7 @@ en:
       sign_in: Sign In
       help: Help
       get_started: Get Started
+      namespace: Namespace
     footer:
       help: Help
       contact_us: Contact us
