Fix namespace text

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -255,7 +255,7 @@ vi:
       sign_in: Sign In
       help: Help
       get_started: Get Started
-      namespace: Namespace
+      namespace: your-company-url
     footer:
       help: Help
       contact_us: Contact us
