--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -258,7 +258,7 @@ ja:
       sign_in: Sign In
       help: Help
       get_started: Get Started
-      namespace: Namespace
+      namespace: your-company-url
     footer:
       help: Help
       contact_us: Contact us
