Fix get started title

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -279,7 +279,7 @@ en:
       terms: Terms
       privacy: Privacy
     get_started_block:
-      title: Free trial up to 30 days sign up now !
+      title: Signup for free now!
       get_started: Get Started
   pages:
     contact:
