--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -271,7 +271,7 @@ ja:
       terms: Terms
       privacy: Privacy
     get_started_block:
-      title: Free trial up to 30 days sign up now !
+      title: Signup for free now!
       get_started: Get Started
   pages:
     contact:
