--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -51,6 +51,8 @@ vi:
       checkout: Về lúc
       late: Trễ
       leave_early: Về sớm
+      min_attend_late: Số giờ đi trễ
+      leave_early: Số giờ về sớm
       working_hours: Thời gian làm việc
   activerecord:
     errors:
