--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,7 @@ en:
       leave_early: Leave early
       min_attend_late: Number of minutes attend late
       min_leave_early: Number of minutes leave early
+      days_off: Days off
       working_hours: Working hours
   activerecord:
     errors:
