--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -53,6 +53,7 @@ vi:
       leave_early: Về sớm
       min_attend_late: Số giờ đi trễ
       min_leave_early: Số giờ về sớm
+      days_off: Số ngày nghỉ
       working_hours: Thời gian làm việc
   activerecord:
     errors:
