--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
       leave_ok: Leave Ok
       leave_early: Leave Early
       annual_leave: Annual Leave
+      days_off: Days off
       working_hours: Working Hours
   user:
     report:
