--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -43,6 +43,7 @@ vi:
       leave_ok: Về đúng giờ
       leave_early: Về sớm
       annual_leave: Nghỉ phép
+      days_off: Số ngày nghỉ
       working_hours: Số giờ làm việc
   user:
     report:
